# paper-reprise

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: algorithm-diagram-guide.md  reproduction-principles.md
runs/AutoRound-2309.05516-20260628-160240/: README.md  README_zh.md  env_snapshot.json  plan.json
runs/GSQ-2604.18556-20260621-091834/: README.md  README_zh.md  env_snapshot.json  ingest.json  plan.json  spec.full.yaml  spec.smoke.yaml  spec.yaml
runs/OAS-MBS-2603.08713-20260709-150131/: README.md  README_zh.md  analysis_en.md  analysis_zh.md  spec.yaml
runs/TurboQuant-2504.19874-20260626-053253/: README.md  README_zh.md
runs/gsq-2604.18556-20260621-091834/: README.md  README_zh.md  report.en.md  report.zh.md
runs/optimize-weight-rounding-via-signed-grad-2309.05516-20260628-160240/: README.md  README_zh.md  env_snapshot.json  ingest.json  report.en.md  report.zh.md  spec.yaml
runs/sector-rotation-by-factor-model-and-fund-2401.00001-20260625-094747/: ingest.json  spec.yaml
runs/turboquant-2504.19874-20260626-053253/: README.md  README_zh.md  env_snapshot.json  ingest.json  report.en.md  report.zh.md  spec.yaml
src/paper_reprise/: __init__.py  cli.py  fetch.py  fromscratch.py  grade.py  (+15 more)
tests/: conftest.py  test_cli.py  test_fetch.py  test_fromscratch.py  test_grade.py  test_headless.py  test_ingest.py  test_modelpaths.py  test_models.py  test_parsers.py  test_pipeline.py  test_planstage.py  test_provider.py  test_report.py  test_rundir.py  test_runexec.py  test_setuploop.py  test_setupstage.py  test_specextract.py  test_stages_stub.py
(+70 files in other folders)
