[project]
name = "paper-reprise"
version = "0.1.0"
description = "Reproduce quantization paper results from arxiv / official repos"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
paper-reprise = "paper_reprise.cli:cli"
reprise = "paper_reprise.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_reprise"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
